src/objects/CH_AuthorizationHistory__c.object
<CustomObject>
    <description>Support Proper processing of non entitled cases similar to SWS
Part of https://jiradc2.ext.net.nokia.com/browse/NOKIASC-33688</description>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <description>NOKIASC-34285</description>
        <formula>Account__r.AccountNumber</formula>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CH Authorization History</relationshipLabel>
        <relationshipName>CH_AuthorizationHistory</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <description>NOKIASC-34285</description>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add Contact</fullName>
                </value>
                <value>
                    <fullName>Delete Contact</fullName>
                </value>
                <value>
                    <fullName>Add Account</fullName>
                </value>
                <value>
                    <fullName>Delete Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactEmail__c</fullName>
        <formula>Contact__r.Email</formula>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NOKIASC-34285</description>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CH Authorization History</relationshipLabel>
        <relationshipName>CH_AuthorizationHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ServiceContract__c</fullName>
        <description>NOKIASC-34285</description>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Authorization History</relationshipLabel>
        <relationshipName>AuthorizationHistory</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>CH Authorization History</label>
    <nameField>
        <displayFormat>AH-{000000}</displayFormat>
        <label>History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CH Authorization History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>